--- a/.travis.yml
+++ b/.travis.yml
@@ -8,12 +8,19 @@ services:
   - postgresql
   - rabbitmq
   - docker
-  
+  # - mongodb  # odkomentuj, jeśli Travis to obsługuje i faktycznie chcesz użyć MongoDB
 
 before_install:
   - sudo apt-get update -qq
-  - sudo apt-get install -y clang cmake ccache shellcheck shfmt groovy gradle mercurial subversion git-lfs mongodb default-jdk
+  - sudo apt-get install -y clang cmake ccache shellcheck groovy gradle mercurial subversion git-lfs default-jdk
+  
+  # Instalacja shfmt z GitHuba
+  - curl -sS -L https://github.com/mvdan/sh/releases/download/v3.4.0/shfmt_v3.4.0_linux_amd64 -o shfmt
+  - chmod +x shfmt
+  - sudo mv shfmt /usr/local/bin/
+
   - sudo apt-get install -y docker-compose || true
+  
   - sudo systemctl start mysql || true
   - sudo systemctl start rabbitmq-server || true
   - sudo systemctl start postgresql || true
@@ -43,6 +50,7 @@ script:
   - docker run hello-world
   - docker compose version || true
   - docker buildx version || true
-  - mongod --version
+  # Poniższe może się nie powieść, jeśli MongoDB nie jest faktycznie zainstalowane
+  - mongod --version || true
   - gradle -version
   - groovy -version
