--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
-dist: bionic
-group: stable
+dist: focal
+group: dev
 language: generic
 sudo: required
 
@@ -69,3 +69,34 @@ script:
   - groovy -version
   - java -version
   - javac -version
+
+  # ===== Dodane Polecenia =====
+
+  # 1. Wylistowanie wszystkich plików i katalogów w /opt/jvm, /usr/lib/jvm, /home/travis/.bash_profile.d oraz /opt/tools
+  - echo "===== Lista zawartości wybranych katalogów ====="
+  - |
+    directories=(
+      "/opt"
+      "/usr/lib"
+      "/usr"
+      "/home/travis/.bash_profile.d"
+      "/opt/tools" # Dodaj tutaj inne katalogi według potrzeby
+    )
+
+    for dir in "${directories[@]}"; do
+      echo "===== Lista zawartości katalogu $dir ====="
+      if [ -d "$dir" ]; then
+        ls -la "$dir"
+      else
+        echo "Katalog $dir nie istnieje."
+      fi
+      echo ""
+    done
+
+  # 2. Wypisanie zawartości pliku /home/travis/.bash_profile.d/travis_jdk.bash
+  - echo "===== Zawartość pliku /home/travis/.bash_profile.d/travis_jdk.bash ====="
+  - if [ -f "/home/travis/.bash_profile.d/travis_jdk.bash" ]; then
+      cat /home/travis/.bash_profile.d/travis_jdk.bash;
+    else
+      echo "Plik /home/travis/.bash_profile.d/travis_jdk.bash nie istnieje.";
+    fi
