--- a/.travis.yml
+++ b/.travis.yml
@@ -78,6 +78,8 @@ script:
     directories=(
       "/opt"
       "/usr/lib"
+      "/usr/local/lib/jvm"
+      "/usr/local/lib"
       "/usr/lib/jvm"
       "/home/travis/.bash_profile.d"
       "/opt/tools" # Dodaj tutaj inne katalogi według potrzeby
