--- a/.travis.yml
+++ b/.travis.yml
@@ -3,102 +3,48 @@ group: dev
 language: generic
 sudo: required
 
-services:
-  - mysql
-  - postgresql
-  - rabbitmq
-  - docker
+install: skip
+script: java -version
+jobs:
+  include:
+    - name: "JDK 17 - PHP on XENIAL"
+      dist: xenial
+      language: php
+      php: 8.2.9
+      jdk: openjdk17
+    - name: "JDK 17 - PHP on Bionic"
+      dist: bionic
+      language: php
+      php: 8.2.9
+      jdk: openjdk17
+    - name: "JDK 17 - PHP on FOCAL"
+      dist: focal
+      language: php
+      php: 8.2.9
+      jdk: openjdk17
+    - name: "JDK 17 - PHP on JAMMY"
+      dist: jammy
+      language: php
+      php: 8.2.9
+      jdk: openjdk17
 
-before_install:
-  - sudo apt-get update -qq
-  - sudo apt-get install -y docker-compose || true
-
-before_script:
-  - sudo systemctl start mysql || true
-  - sudo systemctl start postgresql || true
-
-script:
-  # Usługi
-  - sudo systemctl status mysql.service
-  - sudo systemctl status rabbitmq-server.service
-  - sudo systemctl status postgresql.service
-  - sudo rabbitmqctl status || true
-
-  # Bazy danych
-  - mysqld --version
-  - psql --version
-  - mysqld --print-defaults
-  - psql -U postgres -c 'SELECT 1;' || true
-
-  # Python i pip
-  - python --version
-  - pip --version
-  - python3 --version
-  - pip3 --version
-
-  # Heroku CLI
-  - heroku --version
-
-  # Kontrola wersji
-  - git --version
-  - git-lfs --version
-  - hg --version
-  - svn --version
-
-  # Kompilatory i narzędzia
-  - clang --version
-  - cmake --version
-  - gcc --version
-  - ccache -V
-
-  # Analiza i formatowanie
-  - shellcheck --version
-  - shfmt -version
-
-  # Docker i powiązane
-  - docker version
-  - docker run hello-world
-  - docker-compose --version
-  - docker buildx version
-
-  # MongoDB
-  - mongod --version
-
-  # JVM i systemy budowania
-  - gradle -version
-  - groovy -version
-  - java -version
-  - javac -version
-
-  # ===== Dodane Polecenia =====
-
-  # 1. Wylistowanie wszystkich plików i katalogów w /opt/jvm, /usr/lib/jvm, /home/travis/.bash_profile.d oraz /opt/tools
-  - echo "===== Lista zawartości wybranych katalogów ====="
-  - |
-    directories=(
-      "/opt"
-      "/usr/lib"
-      "/usr/local/lib/jvm"
-      "/usr/local/lib"
-      "/usr/lib/jvm"
-      "/home/travis/.bash_profile.d"
-      "/opt/tools" # Dodaj tutaj inne katalogi według potrzeby
-    )
-
-    for dir in "${directories[@]}"; do
-      echo "===== Lista zawartości katalogu $dir ====="
-      if [ -d "$dir" ]; then
-        ls -la "$dir"
-      else
-        echo "Katalog $dir nie istnieje."
-      fi
-      echo ""
-    done
-
-  # 2. Wypisanie zawartości pliku /home/travis/.bash_profile.d/travis_jdk.bash
-  - echo "===== Zawartość pliku /home/travis/.bash_profile.d/travis_jdk.bash ====="
-  - if [ -f "/home/travis/.bash_profile.d/travis_jdk.bash" ]; then
-      cat /home/travis/.bash_profile.d/travis_jdk.bash;
-    else
-      echo "Plik /home/travis/.bash_profile.d/travis_jdk.bash nie istnieje.";
-    fi
+    - name: "JDK 17 - RUBY on XENIAL"
+      dist: xenial
+      language: ruby
+      ruby: 3.1.2
+      jdk: openjdk17
+    - name: "JDK 17 - RUBY on Bionic"
+      dist: bionic
+      language: ruby
+      ruby: 3.1.2
+      jdk: openjdk17
+    - name: "JDK 17 - RUBY on FOCAL"
+      dist: focal
+      language: ruby
+      ruby: 3.1.2
+      jdk: openjdk17
+    - name: "JDK 17 - RUBY on JAMMY"
+      dist: jammy
+      language: ruby
+      ruby: 3.1.2
+      jdk: openjdk17
