--- a/.travis.yml
+++ b/.travis.yml
@@ -5,9 +5,8 @@ install: skip
 script: java -version
 jobs:
   include:
-    - name: "JDK 17 - PHP on FOCAL"
-      dist: focal
-      language: php
-      php: 8.3
-      jdk: openjdk9
-
+    - name: "JDK 17 - RUBY on XENIAL"
+      dist: xenial
+      language: ruby
+      ruby: 3.1.2
+      jdk: openjdk17
