ruby jdk 17 test

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,6 @@ jobs:
   include:
     - name: "JDK 17 - RUBY on XENIAL"
       dist: xenial
-      language: php
-      php: 8.3
+      language: ruby
+      ruby: 3.1.2
       jdk: openjdk17
