--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,8 @@ install: skip
 script: java -version
 jobs:
   include:
-    - name: "JDK 17 - RUBY on BIONIC"
+    - name: "JDK 17 - PHP on Bionic"
       dist: bionic
-      language: ruby
-      ruby: 3.1.2
+      language: php
+      php: 8.2.9
       jdk: openjdk17
