--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,6 @@ jobs:
   include:
     - name: "JDK 17 - PHP on Bionic"
       dist: bionic
-      language: php
-      php: 8.2.9
-      jdk: openjdk8
+      language: ruby
+      ruby: 3.1.2
+      jdk: openjdk17
