--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ install: skip
 script: java -version
 jobs:
   include:
-    - name: "JDK 17 - PHP on Bionic test"
+    - name: "JDK 17 - PHP on Bionic test 8.2.9"
       dist: bionic
       language: php
       php: 8.2.9
