--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ install: skip
 script: java -version
 jobs:
   include:
-    - name: "JDK 17 - PHP on Bionic test 8.2.9"
+    - name: "JDK 17 - PHP on Bionic test 8.2.9 v2"
       dist: bionic
       language: scala
       php:  3.6.3
