--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,8 @@ install: skip
 script: java -version
 jobs:
   include:
-    - name: "JDK 17 - PHP on Bionic test 8.2.9 v2"
+    - name: "JDK 17 - PHP on Bionic test 8.2.9"
       dist: bionic
-      language: scala
-      php:  3.6.3
+      language: php
+      php: 8.2.9
       jdk: openjdk17
