--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,8 @@ install: skip
 script: java -version
 jobs:
   include:
-    - name: "JDK 17 - PHP on Bionic test 8.2.9 v5"
-      dist: bionic
+    - name: "JDK 17 - PHP on Bionic test 8.2.9 v6"
+      dist: xenial
       language: php
       php: 8.2.9
       jdk: openjdk9
