--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,6 @@
 language: shell
 
-# Travis CI build settings
-dist: focal  # Use Ubuntu 20.04 (supports Python 3.9)
+dist: focal
 group: stable
 
 jobs:
@@ -11,7 +10,7 @@ jobs:
         - sudo apt-get install -y build-essential libbz2-dev libreadline-dev libsqlite3-dev libffi-dev zlib1g-dev
         - sudo apt-get install -y python3.9 python3.9-dev python3.9-venv python3-pip
         - sudo update-alternatives --install /usr/bin/python3 python3 /usr/bin/python3.9 1
-        - python3 --version  # Verify Python version
+        - python3 --version  # Powinno wyświetlić Python 3.9.x
         - python3 -m pip install --upgrade pip setuptools
         - python3 -m pip install virtualenv
       env:
@@ -37,18 +36,18 @@ install:
   - sudo python -m pip install virtualenv
 
 before_script:
-  - "export INSTALL_DEST=${INSTALL_DEST:-/opt/python}"
-  - "export LSB_RELEASE=${LSB_RELEASE:-$(lsb_release -rs)}"
-  - "export OS_NAME=${OS_NAME:-$(lsb_release -is | tr 'A-Z' 'a-z')}"
-  - "export ARCH=${ARCH:-$(uname -m)}"
-  - "export PACKAGES=${PACKAGES:-pip nose pytest mock wheel pipenv dataclasses}"
-  - "export PYTHON_CONFIGURE_OPTS='--with-wide-unicode --enable-shared --enable-ipv6 --enable-loadable-sqlite-extensions --with-computed-gotos $CONFIGURE_OPTS'"
+  - export INSTALL_DEST=${INSTALL_DEST:-/opt/python}
+  - export LSB_RELEASE=${LSB_RELEASE:-$(lsb_release -rs)}
+  - export OS_NAME=${OS_NAME:-$(lsb_release -is | tr 'A-Z' 'a-z')}
+  - export ARCH=${ARCH:-$(uname -m)}
+  - export PACKAGES=${PACKAGES:-pip nose pytest mock wheel pipenv dataclasses}
+  # Używamy podwójnych cudzysłowów, aby $CONFIGURE_OPTS (jeśli ustawiona) została rozwinięta.
+  - export PYTHON_CONFIGURE_OPTS="--with-wide-unicode --enable-shared --enable-ipv6 --enable-loadable-sqlite-extensions --with-computed-gotos ${CONFIGURE_OPTS}"
   - sudo chown -R $USER $HOME/.cache
 
-script: 
-  - sudo apt-get update && sudo apt-get install -y build-essential libssl-dev zlib1g-dev \
-    libbz2-dev libreadline-dev libsqlite3-dev curl libncursesw5-dev xz-utils tk-dev \
-    libxml2-dev libxmlsec1-dev libffi-dev liblzma-dev
+script:
+  # Wyłączamy post-invoke hook apt-get, aby nie wywoływał błędnego skryptu (brak modułu apt_pkg)
+  - sudo apt-get update -o APT::Update::Post-Invoke-Success="" && sudo apt-get install -y build-essential libssl-dev zlib1g-dev libbz2-dev libreadline-dev libsqlite3-dev curl libncursesw5-dev xz-utils tk-dev libxml2-dev libxmlsec1-dev libffi-dev liblzma-dev
   - ./bin/compile
 
 after_success: ./bin/archive
