--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,8 @@
 language: shell
 
-# stages:
-#   - build
-# stage: build
-
 jobs:
   include:
-    - language: bash
-      name: freebsd
+    - name: freebsd
       os: freebsd
       group: dev
       install:
@@ -16,66 +11,49 @@ jobs:
         - sudo git checkout master
         - sudo git pull
         - popd
-        - python --version
-        - python -m pip install virtualenv==20.0.2
-    - dist: xenial
+        # Upewnij się, że wywołujemy python3 – nie polegamy na aliasach
+        - python3 --version
+        - python3 -m pip install --upgrade pip setuptools virtualenv==20.0.2
+    - name: xenial
+      dist: xenial
       group: stable
-      install:
-        - sudo apt-get install build-essential libbz2-dev libreadline-dev libsqlite3-dev libffi-dev zlib1g-dev
       env:
         - RELEASE=xenial
-      name: xenial
-    
-
-allow_failures:
-  - name: freebsd
+      install:
+        - sudo apt-get update
+        - sudo apt-get install -y build-essential libbz2-dev libreadline-dev libsqlite3-dev libffi-dev zlib1g-dev
+        - python3 --version
+        - python3 -m pip install --upgrade pip setuptools virtualenv
 
 env:
   global:
     - VERSION=3.9.9
-  # - ALIAS=nightly
+    # Jeśli potrzebujesz dodatkowych zmiennych (np. PYTHON_BIN, VIRTENV_VERSION) – ustaw je tutaj.
 
-install:
-  # - git clone https://github.com/pyenv/pyenv-update.git $(pyenv root)/plugins/pyenv-update
-  # - pyenv update
-  - pushd /opt/pyenv/
-  - sudo git config --global --add safe.directory /opt/pyenv
-  - sudo git checkout master
-  - sudo git pull
-  - popd
-  - alias python=python3
-  - python -m pip install virtualenv
-  - sudo pip install --upgrade pip
-  - sudo pip install setuptools
-  #- if [[ $(lsb_release -cs) == "jammy" &&  $(uname -m) == "ppc64le" ]]; then alias python=python3; fi
-  # As of this writing:
-  # * Py2 is EOL
-  #   * however, pip (https://pip.pypa.io/en/latest/develss/#python-2-support) intends to keep supporting it as long as practical
-  #   * Virtualenv also supports old versions (e.g. 3.4) far longer than PSF does
-  # * all images have `virtualenv` on PATH but vary in whether it's per-user or global and which Python installation it belongs to
-  #   * some of these preinstalled `virtualenv`s don't support 3.9+
-  # * selected amd64 images have 3.7.* preinstalled with pip; multiarch have pyenv not on PATH, with no alt versions
-  # * xenial's provided Py3, 3.5, is in security fixes mode, due for EOL in 06.2020
-  #
-  # So it seems to be safe to use `virtualenv` with system's Py2 if we update it, for the foreseeable future.
-  # FIXME: use an officially supported alt Python version for `virtualenv` instead once one is available in all images.
-  - |
-    # `cat` avoids "broken pipe"; `freeze` instead of `list` avoids a warning about future output format change
-    if (python -m pip freeze --user | cat | grep -qP '^virtualenv=='); then
-      python -m pip install --upgrade --user virtualenv
-    elif (python -m pip freeze | cat | grep -qP '^virtualenv=='); then
-      sudo python -m pip install --upgrade virtualenv
-    else
-      sudo python -m pip install virtualenv
-    fi
+# Globalne polecenia instalacyjne – pamiętaj, że jeżeli w poszczególnych jobach masz własne sekcje install,
+# to te globalne mogą być pomijane – dostosuj strukturę do swoich potrzeb.
+# Jeśli chcesz mieć jednolitą instalację, rozważ przeniesienie wszystkich kroków do sekcji globalnej.
 
 before_script:
-  - "export INSTALL_DEST=${INSTALL_DEST:-/opt/python}"
-  - 'export LSB_RELEASE=${LSB_RELEASE:-$(lsb_release -rs || if [[ $(uname -a) == *"FreeBSD"* ]]; then echo $(uname -r | rev | cut -c9- | rev); else false; fi || echo ${$(sw_vers -productVersion)%*.*})}'
-  - 'export OS_NAME=${OS_NAME:-$((lsb_release -is || if [[ $(uname -a) == *"FreeBSD"* ]]; then echo $(uname | cut -c1-); else false; fi || echo "osx") | tr "A-Z" "a-z")}'
-  - "export ARCH=${ARCH:-$(uname -m)}"
-  # pipenv is supported for python 2.7 and 3.4 and higher.
-  - "export PACKAGES=${PACKAGES:-pip nose pytest mock wheel pipenv dataclasses}"
+  - export INSTALL_DEST=${INSTALL_DEST:-/opt/python}
+  - >
+    export LSB_RELEASE=${LSB_RELEASE:-$(lsb_release -rs ||
+      (if [[ $(uname -a) == *"FreeBSD"* ]]; then
+         echo $(uname -r | rev | cut -c9- | rev);
+       else
+         false;
+       fi) ||
+       echo ${$(sw_vers -productVersion)%*.*})}
+  - >
+    export OS_NAME=${OS_NAME:-$((lsb_release -is ||
+      (if [[ $(uname -a) == *"FreeBSD"* ]]; then
+         echo $(uname | cut -c1-);
+       else
+         false;
+       fi) ||
+       echo "osx") | tr "A-Z" "a-z")}
+  - export ARCH=${ARCH:-$(uname -m)}
+  - export PACKAGES=${PACKAGES:-pip nose pytest mock wheel pipenv dataclasses}
   - export PYTHON_CONFIGURE_OPTS="--with-wide-unicode --enable-shared --enable-ipv6 --enable-loadable-sqlite-extensions --with-computed-gotos $CONFIGURE_OPTS"
   - sudo chown -R $USER $HOME/.cache
   - |
@@ -85,11 +63,12 @@ before_script:
         sudo tar xf pypy*.tar.bz2 -C /
       fi
       source ~/virtualenv/pypy/bin/activate
-      python --version
+      python3 --version
     fi
 
-script: 
-  - sudo apt-get update && sudo apt-get install build-essential libssl-dev zlib1g-dev libbz2-dev libreadline-dev libsqlite3-dev curl libncursesw5-dev xz-utils tk-dev libxml2-dev libxmlsec1-dev libffi-dev liblzma-dev -y
+script:
+  - sudo apt-get update
+  - sudo apt-get install -y build-essential libssl-dev zlib1g-dev libbz2-dev libreadline-dev libsqlite3-dev curl libncursesw5-dev xz-utils tk-dev libxml2-dev libxmlsec1-dev libffi-dev liblzma-dev
   - ./bin/compile
 
 after_success: ./bin/archive
@@ -111,4 +90,3 @@ addons:
     branch:
       - default
     cache_control: public
-
