--- a/.travis.yml
+++ b/.travis.yml
@@ -57,6 +57,7 @@ before_script:
 script:
   - sudo apt-get update
   - sudo apt-get install -y build-essential libssl-dev zlib1g-dev libbz2-dev libreadline-dev libsqlite3-dev curl libncursesw5-dev xz-utils tk-dev libxml2-dev libxmlsec1-dev libffi-dev liblzma-dev
+  - ./bin/compile
 
 after_success: ./bin/archive
 
