--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,9 @@
 language: shell
 
+# stages:
+#   - build2
+# stage: build
+
 jobs:
   include:
     - language: bash
@@ -7,73 +11,80 @@ jobs:
       os: freebsd
       group: dev
       install:
-        - set +x
-        - pushd /opt/pyenv/ > /dev/null 2>&1
-        - sudo git config --global --add safe.directory /opt/pyenv > /dev/null 2>&1
-        - sudo git checkout master > /dev/null 2>&1
-        - sudo git pull --quiet > /dev/null 2>&1
-        - popd > /dev/null 2>&1
-        - python --version > /dev/null 2>&1
-        - sudo python -m ensurepip > /dev/null 2>&1
-        - sudo python -m pip install --upgrade pip -q > /dev/null 2>&1
-        - sudo python -m pip install virtualenv==20.0.2 -q > /dev/null 2>&1
+        - pushd /opt/pyenv/
+        - sudo git config --global --add safe.directory /opt/pyenv
+        - sudo git checkout master
+        - sudo git pull
+        - popd
+        - python --version
+        - sudo python -m ensurepip
+        - sudo python -m pip install --upgrade pip
+        - sudo python -m pip install virtualenv==20.0.2
 
-allow_failures:
-  - name: freebsd
 
 env:
   global:
     - VERSION=3.9.9
+  # - ALIAS=nightly
 
 install:
-  - set +x
-  - pushd /opt/pyenv/ > /dev/null 2>&1
-  - sudo git config --global --add safe.directory /opt/pyenv > /dev/null 2>&1
-  - sudo git checkout master > /dev/null 2>&1
-  - sudo git pull > /dev/null 2>&1
-  - popd > /dev/null 2>&1
+  # - git clone https://github.com/pyenv/pyenv-update.git $(pyenv root)/plugins/pyenv-update
+  # - pyenv update
+  - pushd /opt/pyenv/
+  - sudo git config --global --add safe.directory /opt/pyenv
+  - sudo git checkout master
+  - sudo git pull
+  - popd
   - alias python=python3
-  - python -m pip install virtualenv -q > /dev/null 2>&1
-  - sudo pip install --upgrade pip -q > /dev/null 2>&1
-  - sudo pip install setuptools -q > /dev/null 2>&1
+  - python -m pip install virtualenv
+  - sudo pip install --upgrade pip
+  - sudo pip install setuptools
+  #- if [[ $(lsb_release -cs) == "jammy" &&  $(uname -m) == "ppc64le" ]]; then alias python=python3; fi
+  # As of this writing:
+  # * Py2 is EOL
+  #   * however, pip (https://pip.pypa.io/en/latest/develss/#python-2-support) intends to keep supporting it as long as practical
+  #   * Virtualenv also supports old versions (e.g. 3.4) far longer than PSF does
+  # * all images have `virtualenv` on PATH but vary in whether it's per-user or global and which Python installation it belongs to
+  #   * some of these preinstalled `virtualenv`s don't support 3.9+
+  # * selected amd64 images have 3.7.* preinstalled with pip; multiarch have pyenv not on PATH, with no alt versions
+  # * xenial's provided Py3, 3.5, is in security fixes mode, due for EOL in 06.2020
+  #
+  # So it seems to be safe to use `virtualenv` with system's Py2 if we update it, for the foreseeable future.
+  # FIXME: use an officially supported alt Python version for `virtualenv` instead once one is available in all images.
   - |
-    {
-      if python -m pip freeze --user | grep -qP '^virtualenv=='; then
-        python -m pip install --upgrade --user virtualenv -q
-      elif python -m pip freeze | grep -qP '^virtualenv=='; then
-        sudo python -m pip install --upgrade virtualenv -q
-      else
-        sudo python -m pip install virtualenv -q
-      fi
-    } > /dev/null 2>&1
+    # `cat` avoids "broken pipe"; `freeze` instead of `list` avoids a warning about future output format change
+    if (python -m pip freeze --user | cat | grep -qP '^virtualenv=='); then
+      python -m pip install --upgrade --user virtualenv
+    elif (python -m pip freeze | cat | grep -qP '^virtualenv=='); then
+      sudo python -m pip install --upgrade virtualenv
+    else
+      sudo python -m pip install virtualenv
+    fi
 
 before_script:
-  - set +x
-  - export INSTALL_DEST=${INSTALL_DEST:-/opt/python}
-  - export LSB_RELEASE=${LSB_RELEASE:-$(lsb_release -rs || if [[ $(uname -a) == *"FreeBSD"* ]]; then echo $(uname -r | rev | cut -c9- | rev); else false; fi || echo ${$(sw_vers -productVersion)%*.*})}
-  - export OS_NAME=${OS_NAME:-$((lsb_release -is || if [[ $(uname -a) == *"FreeBSD"* ]]; then echo $(uname | cut -c1-); else false; fi || echo "osx") | tr "A-Z" "a-z")}
-  - export ARCH=${ARCH:-$(uname -m)}
-  - export PACKAGES=${PACKAGES:-pip nose pytest mock wheel pipenv dataclasses}
+  - "export INSTALL_DEST=${INSTALL_DEST:-/opt/python}"
+  - 'export LSB_RELEASE=${LSB_RELEASE:-$(lsb_release -rs || if [[ $(uname -a) == *"FreeBSD"* ]]; then echo $(uname -r | rev | cut -c9- | rev); else false; fi || echo ${$(sw_vers -productVersion)%*.*})}'
+  - 'export OS_NAME=${OS_NAME:-$((lsb_release -is || if [[ $(uname -a) == *"FreeBSD"* ]]; then echo $(uname | cut -c1-); else false; fi || echo "osx") | tr "A-Z" "a-z")}'
+  - "export ARCH=${ARCH:-$(uname -m)}"
+  # pipenv is supported for python 2.7 and 3.4 and higher.
+  - "export PACKAGES=${PACKAGES:-pip nose pytest mock wheel pipenv dataclasses}"
   - export PYTHON_CONFIGURE_OPTS="--with-wide-unicode --enable-shared --enable-ipv6 --enable-loadable-sqlite-extensions --with-computed-gotos $CONFIGURE_OPTS"
-  - sudo chown -R $USER $HOME/.cache > /dev/null 2>&1
+  - sudo chown -R $USER $HOME/.cache
   - |
-    {
-      if [[ $VERSION = pypy*-dev ]]; then
-        if ! [[ -f ~/virtualenv/pypy/bin/activate ]]; then
-          curl -O https://s3.amazonaws.com/travis-python-archives/binaries/ubuntu/$(lsb_release -rs)/x86_64/pypy2.7-5.9.0.tar.bz2 > /dev/null 2>&1
-          sudo tar xf pypy*.tar.bz2 -C / > /dev/null 2>&1
-        fi
-        source ~/virtualenv/pypy/bin/activate
-        python --version > /dev/null 2>&1
+    if [[ $VERSION = pypy*-dev ]]; then
+      if ! [[ -f ~/virtualenv/pypy/bin/activate ]]; then
+        curl -O https://s3.amazonaws.com/travis-python-archives/binaries/ubuntu/$(lsb_release -rs)/x86_64/pypy2.7-5.9.0.tar.bz2
+        sudo tar xf pypy*.tar.bz2 -C /
       fi
-    } > /dev/null 2>&1
+      source ~/virtualenv/pypy/bin/activate
+      python --version
+    fi
 
 script: 
-  - set +x
-  - sudo apt-get update > /dev/null 2>&1 && sudo apt-get install build-essential libssl-dev zlib1g-dev libbz2-dev libreadline-dev libsqlite3-dev curl libncursesw5-dev xz-utils tk-dev libxml2-dev libxmlsec1-dev libffi-dev liblzma-dev python3-dev -y > /dev/null 2>&1
-  - ./bin/compile > /dev/null 2>&1
+  - sudo apt-get update && sudo apt-get install build-essential libssl-dev zlib1g-dev libbz2-dev libreadline-dev libsqlite3-dev curl libncursesw5-dev xz-utils tk-dev libxml2-dev libxmlsec1-dev libffi-dev liblzma-dev python3-dev -y
+  - ./bin/compile
 
-after_success: ./bin/archive > /dev/null 2>&1
+after_success: ./bin/archive
 
 after_failure: cat /tmp/python-build.*.log
 
@@ -92,3 +103,4 @@ addons:
     branch:
       - default
     cache_control: public
+
